--- a/direitoSimplesFront/src/app/home/home.component.html
+++ b/direitoSimplesFront/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <a href='#'><h3 id="bnt-vamosla">Vamos la!</h3></a>
         <div class="containerimgs">
           <img src="assets/img/questao.png" class="questao" alt="questao exemplo">
-          <img src="assets/img/corujadireito.png" class="img-coruja" alt="coruja">
+          <img src="assets/img/imginicial.png" class="img-coruja" alt="coruja">
         </div>
       </div>
 
@@ -23,4 +23,3 @@
   <div *ngIf="!homeData">
     <p>Carregando dados...</p>
   </div>
-  
