--- a/direitoSimplesFront/src/app/simulado/simulado-list/simulado-list.component.html
+++ b/direitoSimplesFront/src/app/simulado/simulado-list/simulado-list.component.html
@@ -1,8 +1,9 @@
+<app-inicionavbar></app-inicionavbar>
 <section class="section-simulado-list">
-  <app-inicionavbar></app-inicionavbar>
 
   <div class="simulados-container">
     <h2 class="titulo">📚 Simulados Disponíveis</h2>
+
 
     <!-- 🔥 Barra de Progresso Elegante -->
     <div class="progresso-wrapper">
@@ -55,5 +56,6 @@
         </div>
       </li>
     </ul>
-  </div>
+  </div>    
+  <app-pontuacao></app-pontuacao>
 </section>
