--- a/direitoSimplesFront/src/app/gamificacao/conquistas.component.scss
+++ b/direitoSimplesFront/src/app/gamificacao/conquistas.component.scss
@@ -7,13 +7,13 @@
   padding: 40px;
   margin-left: 260px;
   font-family: 'Poppins', sans-serif;
-  color: #fff;
+  color: #000;
 }
 
 .titulo {
   text-align: center;
   margin-bottom: 25px;
-  color: #fff;
+  color: black;
 }
 
 .painel-info {
@@ -28,7 +28,7 @@
 .painel-info p {
   margin: 0;
   font-size: 16px;
-  color: #cbd5e1;
+  color: #000000;
 }
 
 .painel-info strong {
