--- a/direitoSimplesFront/src/app/inicionavbar/inicionavbar.component.scss
+++ b/direitoSimplesFront/src/app/inicionavbar/inicionavbar.component.scss
@@ -10,6 +10,10 @@
     flex-direction: column;
     position: fixed;
   }
+
+  .inicionavbar h1 {
+    cursor: pointer;
+  }
   
   nav {
     flex: 1;
@@ -44,6 +48,11 @@
     border-radius: 8px;
     transition: background 0.3s;
   }
+
+  li img{
+    width: 20px;
+    height: 20px;
+  }
   
   /* HOVER */
   li:hover {
@@ -52,7 +61,7 @@
   
   /* SELECIONADO */
   li.active {
-    background-color: #1574FF; /* azul forte */
+    background-color: #005fbe; /* azul forte */
   }
   
   li button {
