--- a/direitoSimplesFront/src/app/simulado/simulado.component.scss
+++ b/direitoSimplesFront/src/app/simulado/simulado.component.scss
@@ -16,11 +16,9 @@
   justify-content: space-around;
   align-items: center;
   margin-bottom: 1rem;
+  margin-top: 2rem;
 }
 
-.mascot {
-  width: 120px;
-}
 
 .progress-container {
   position: relative;
@@ -162,6 +160,7 @@
   width: 2.5rem;
   height: 2.5rem;
 }
+
 .resultado{
  margin: 2rem;
 }
