--- a/direitoSimplesFront/src/app/login/login.component.css
+++ b/direitoSimplesFront/src/app/login/login.component.css
@@ -21,7 +21,7 @@ main img{
 
 }
 .login-container {
-    width: 300px;
+    width: 350px;
     padding: 20px;
     background-color: #e0f7fa;
     border-radius: 8px;
@@ -35,6 +35,7 @@ main img{
   form {
     display: flex;
     flex-direction: column;
+    gap:20px;
   }
   
   div {
