--- a/direitoSimplesFront/src/app/home/home.component.html
+++ b/direitoSimplesFront/src/app/home/home.component.html
@@ -7,19 +7,52 @@
         <a href='#'><h3 id="bnt-vamosla">Vamos la!</h3></a>
         <div class="containerimgs">
           <img src="assets/img/questao.png" class="questao" alt="questao exemplo">
-          <img src="assets/img/deusa1.png" class="img-coruja" alt="coruja">
+          <img src="assets/img/deusa1.png" class="img-deusa" alt="deusa">
+        </div>
+      </div>
+    
+    
+
+    </div>
+    <section class="features">
+      <h1>Por que estudar no Sagui?</h1>
+      <div class="itens_pq">
+        <div class="pq">
+          <img src="assets/icons/estudo.svg" alt="">
+          <h3>Estudo de forma dinamica</h3>
+          <p> Tenha acesso a um ambiente de estudo interativo, com questões diarias e simulados com econteúdos objetivos. </p>
+        </div>
+        <div class="pq">
+          <img src="assets/icons/conquista.svg" alt="">
+          <h3>Sistema <br> gamificado</h3>
+          <p>Seu aprendizado em uma experiência divertida! Ganhe pontos, desbloqueie conquistas e acompanhe seu progresso.</p>
+        </div>
+        <div class="pq">
+          <img src="assets/icons/artigo.svg" alt="">
+          <h3>Downloads <br> e artigos</h3>
+          <p> Acesse Artigos, legislações atualizadas e faça downloads de conteúdos essenciais para sua jornada no Direito.</p>
         </div>
       </div>
 
-    </div>
-    <div class="container2">
+    </section>
+    <section class="container2">
       <h1>Simulados do com questões atualizadas</h1>
-      <img src="assets/img/questao.png" id="questaosimulado" alt="questao exemplo">
+      <img src="assets/img/simulados.png" id="questaosimulado" alt="questao exemplo">
+    </section>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-content">
+        <p>&copy; 2023 Sagui. Todos os direitos reservados.</p>
+        <p>Desenvolvido por <a href="https://www.linkedin.com/in/joão-dantas-tx/" target="_blank">João Dantas</a> e <a href="#" target="_blank">George Garcia</a>.</p>
+      </div>
     </div>
+  </footer>
+    
 
 </div>
   
   <!-- Exibe uma mensagem enquanto os dados estão sendo carregados -->
-  <div *ngIf="!homeData">
+  <!-- <div *ngIf="!homeData">
     <p>Carregando dados...</p>
-  </div>
+  </div> -->
