--- a/direitoSimplesFront/src/app/navbar/navbar.component.scss
+++ b/direitoSimplesFront/src/app/navbar/navbar.component.scss
@@ -34,7 +34,7 @@
 }
 
 .menu-central a {
-  text-decoration: none;
+  // text-decoration: none;
   font-weight: 500;
   color: #fff;
   transition: color 0.3s ease;
