--- a/direitoSimplesFront/src/app/simulado/simulado-list/simulado-list.component.scss
+++ b/direitoSimplesFront/src/app/simulado/simulado-list/simulado-list.component.scss
@@ -7,25 +7,24 @@
   display: flex;
   justify-content: space-between;
   font-size: 14px;
-  color: #d1d5db;
+  color: #555;
   margin-bottom: 6px;
 }
 
 .progresso-barra {
   width: 100%;
   height: 10px;
-  background-color: #1e293b;
+  background-color: #ddd;
   border-radius: 999px;
   overflow: hidden;
 }
 
 .progresso-preenchido {
   height: 100%;
-  background: linear-gradient(to right, #3b82f6, #2563eb);
+  background: linear-gradient(to right, #1976d2, #1565c0);
   border-radius: 999px;
   transition: width 0.4s ease;
 }
-
 
 .section-simulado-list {
   display: flex;
@@ -36,14 +35,14 @@
   max-width: 800px;
   padding: 20px;
   font-family: 'Poppins', sans-serif;
-  color: #fff;
+  color: #333;
   width: 50%;
-
 }
 
 h2 {
   text-align: center;
   margin-bottom: 30px;
+  color: #333;
 }
 
 .simulados-list {
@@ -55,7 +54,7 @@ h2 {
 }
 
 .simulado-card {
-  background: linear-gradient(90deg, #0A142F, #3E5286);
+  background-color: #f1f1f1;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35);
@@ -82,15 +81,14 @@ h2 {
   }
 }
 
-
 .simulado-card h3 {
   margin-bottom: 8px;
-  color: white;
+  color: #1976d2;
 }
 
 .simulado-card p {
   margin-bottom: 16px;
-  color: white;
+  color: #555;
 }
 
 .acoes {
@@ -113,12 +111,12 @@ h2 {
 }
 
 .btn-iniciar {
-  background-color: #3f83f8;
+  background-color: #1976d2;
   color: white;
 }
 
 .btn-iniciar:hover {
-  background-color: #1e40af;
+  background-color: #1565c0;
 }
 
 .btn-concluido {
