--- a/direitoSimplesFront/src/app/admin-panel/admin-panel.component.scss
+++ b/direitoSimplesFront/src/app/admin-panel/admin-panel.component.scss
@@ -120,7 +120,14 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  
   }
+  .select-itens div{  
+    border: 1px solid #ddd;
+    padding: 0.5rem;
+    border-radius: 5px;
+  }
+  
   .pagination-controls{
     display: flex;
     justify-content: center;
@@ -139,6 +146,7 @@ h1 {
     border-radius: 6px;
     font-weight: bold;
     cursor: pointer;
+    margin-left: 100%;
   }
   
   .logout-button:hover {
@@ -149,6 +157,9 @@ h1 {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    border: 1px solid #ddd;
+    padding: 0.5rem;
+    border-radius: 5px;
   }
 
   ul.itens_editar_simulado{
@@ -156,8 +167,21 @@ h1 {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
+    
   }
 
 .simulado_section{
   display: flex;
+}
+.Fver_bnt{
+  background-color: #dc3545
+}
+.remover_bnt:hover{
+  background-color: #bb2d3b;
+}
+.add_bnt{
+  background-color: #19d144;
+}
+.add_bnt:hover{
+  background-color: #12a532;
 }
