--- a/direitoSimplesFront/src/app/artigos/artigos.component.scss
+++ b/direitoSimplesFront/src/app/artigos/artigos.component.scss
@@ -16,10 +16,10 @@ h2 {
 }
 
 .artigo-item {
-  background-color: #f1f1f1;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35);
+  // background-color: #f1f1f1;
+  // border-radius: 10px;
+  padding: 20px 20px 0px 20px;
+  // box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   animation: fadeIn 0.6s ease;
 }
@@ -63,6 +63,12 @@ hr {
 
 .list{
   width: 40rem;
+}
+
+.shadown{
+  background-color: #f1f1f1;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.35);
+  border-radius: 15px;
 }
 
 @keyframes fadeIn {
