--- a/direitoSimplesFront/src/app/downloads/downloads.component.html
+++ b/direitoSimplesFront/src/app/downloads/downloads.component.html
@@ -3,16 +3,19 @@
     <div class="list">
 
       <h2>📥 Downloads e Materiais</h2>
-      <div *ngIf="downloads.length === 0">
-      <p>Nenhum material disponível no momento.</p>
-    </div>
-    
-    <div *ngFor="let item of downloads" class="download-item">
-      <h3>{{ item.titulo }}</h3>
-      <p *ngIf="item.descricao">{{ item.descricao }}</p>
-      <a [href]="item.arquivo" target="_blank" download>⬇️ Baixar arquivo</a>
-      <div class="categoria" *ngIf="item.categoria">{{ item.categoria }}</div>
-      <hr>
-    </div>
+      <div class="shadown">
+
+        <div *ngIf="downloads.length === 0">
+          <p>Nenhum material disponível no momento.</p>
+        </div>
+        
+        <div *ngFor="let item of downloads" class="download-item">
+          <h3>{{ item.titulo }}</h3>
+          <p *ngIf="item.descricao">{{ item.descricao }}</p>
+          <a [href]="item.arquivo" target="_blank" download>⬇️ Baixar arquivo</a>
+          <div class="categoria" *ngIf="item.categoria">{{ item.categoria }}</div>
+          <hr>
+        </div>
+      </div>
   </div>
 </div>
